base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: shortener-api-service
spec:
    ports:
        - port: 80
          targetPort: 8000
          protocol: TCP
    selector:
        app.kubernetes.io/name: shortener-api
