base/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortener-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.scg.sh, https://app.shortener-qa.scg.skku.ac.kr"
spec:
  tls:
    - hosts:
        - api.scg.sh
        - scg.sh
      secretName: gitops-be-tls
  rules:
    - host: api.scg.sh
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shortener-api-service
                port:
                  number: 80
    - host: scg.sh
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shortener-api-service
                port:
                  number: 80
